fix deprecated API calls for Java 11