@@ -187,7 +187,7 @@ public class SiteswapGenerator extends Generator {
                     target.setStatus(guistrings.getString("Generator_patterns_1"));
                 else {
                     String template = guistrings.getString("Generator_patterns_ne1");
-                    Object[] arguments = { new Integer(num) };
+                    Object[] arguments = { Integer.valueOf(num) };
                     target.setStatus(MessageFormat.format(template, arguments));
                 }
             }
@@ -452,7 +452,7 @@ public class SiteswapGenerator extends Generator {
 
         if ((l_min % rhythm_period) != 0 || (l_max % rhythm_period) != 0) {
             String template = errorstrings.getString("Error_period_multiple");
-            Object[] arguments = { new Integer(rhythm_period) };
+            Object[] arguments = { Integer.valueOf(rhythm_period) };
             throw new JuggleExceptionUser(MessageFormat.format(template, arguments));
         }
 
@@ -707,7 +707,7 @@ public class SiteswapGenerator extends Generator {
                 loop_counter = 0;
                 if ((System.currentTimeMillis() - start_time_millis) > max_time_millis) {
                     String template = guistrings.getString("Generator_timeout");
-                    Object[] arguments = { new Integer((int)max_time) };
+                    Object[] arguments = { Integer.valueOf((int)max_time) };
                     throw new JuggleExceptionDone(MessageFormat.format(template, arguments));
                 }
             }
@@ -800,7 +800,7 @@ public class SiteswapGenerator extends Generator {
 
                 if (max_num >= 0 && num >= max_num) {
                     String template = guistrings.getString("Generator_spacelimit");
-                    Object[] arguments = { new Integer(max_num) };
+                    Object[] arguments = { Integer.valueOf(max_num) };
                     throw new JuggleExceptionDone(MessageFormat.format(template, arguments));
                 }
             }
